--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.4",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
